--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -387,24 +387,8 @@ jobs:
         env:
           COMPANY_P12_NAME: ${{ secrets.COMPANY_P12_NAME }}
         run: |
-          CODESIGN_ALLOCATE=`xcrun --find codesign_allocate`; export CODESIGN_ALLOCATE
-          IPA="./DarockBili_Release.ipa"
-          PROVISION="$RUNNER_TEMP/build_pp.mobileprovision"
-          CERTIFICATE="$COMPANY_P12_NAME"
-          # unzip the ipa
-          unzip -q "$IPA"
-          mkdir Scache
-          mv Payload/*.app/Watch/*.app Scache
-          rm -rf Payload/*
-          mv Scache/*.app Payload/
-          # remove the signature
-          rm -rf Payload/*.app/_CodeSignature
-          # replace the provision
-          cp "$PROVISION" Payload/*.app/embedded.mobileprovision
-          # sign with the new certificate (--resource-rules has been deprecated OS X Yosemite (10.10), it can safely be removed)
-          /usr/bin/codesign -f -s "$CERTIFICATE" Payload/*.app
-          # zip it back up
-          zip -qr resigned.ipa Payload
+          wget https://github.com/iMokhles/AppSignerCMD/releases/download/1.0/AppSignerCMD
+          ./AppSignerCMD -f ./DarockBili_Release.ipa -s "$COMPANY_P12_NAME" -p "$RUNNER_TEMP/build_pp.mobileprovision" -i "com.djbx.life.agent.dat" -o resigned.ipa
           
       - name: Upload IPA File
         uses: actions/upload-artifact@v3
