--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -414,26 +414,25 @@ jobs:
           name: Company IPA
           path: ./resigned.ipa
 
-#  deploy:
-#    name: Deploy to TestFlight
-#    runs-on: macos-13
-#    needs:
-#      - export
-#      - test
-#    env:
-#      ASCAPI_ISSUER_ID: ${{ secrets.ASCAPI_ISSUER_ID }}
-#      ASCAPI_KEY_ID: ${{ secrets.ASCAPI_KEY_ID }}
-#      ASCAPI_KEY: ${{ secrets.ASCAPI_KEY }}
-#    steps:
-#      - name: Download App Archive
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: Release IPA
-#
-#      - name: Prepare API Key
-#        run: |
-#          mkdir ~/.private_keys
-#          echo "$ASCAPI_KEY" >> ~/.private_keys/AuthKey_${ASCAPI_KEY_ID}.p8
-#      - name: Upload to App Store Connect
-#        run: xcrun altool --upload-app -f ./DarockBili_Release.ipa -t ios --apiKey $ASCAPI_KEY_ID --apiIssuer $ASCAPI_ISSUER_ID
+  deploy:
+    name: Deploy to TestFlight
+    runs-on: macos-13
+    needs:
+      - export
+    env:
+      ASCAPI_ISSUER_ID: ${{ secrets.ASCAPI_ISSUER_ID }}
+      ASCAPI_KEY_ID: ${{ secrets.ASCAPI_KEY_ID }}
+      ASCAPI_KEY: ${{ secrets.ASCAPI_KEY }}
+    steps:
+      - name: Download App Archive
+        uses: actions/download-artifact@v3
+        with:
+          name: Release IPA
+
+      - name: Prepare API Key
+        run: |
+          mkdir ~/.private_keys
+          echo "$ASCAPI_KEY" >> ~/.private_keys/AuthKey_${ASCAPI_KEY_ID}.p8
+      - name: Upload to App Store Connect
+        run: xcrun altool --upload-app -f ./DarockBili_Release.ipa -t ios --apiKey $ASCAPI_KEY_ID --apiIssuer $ASCAPI_ISSUER_ID
         
