--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -334,11 +334,11 @@ jobs:
           name: Company Xcode Archive
           path: ./DarockBili_Release.xcarchive
 
-      - name: Install MEMZ Cer and Prov
+      - name: Install Company Cer and Prov
         env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
-          P12_PASSWORD: ${{ secrets.P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.BUILD_PROVISION_PROFILE_BASE64 }}
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.COMPANY_P12 }}
+          P12_PASSWORD: ${{ secrets.COMPANY_P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.COMPANY_PROV }}
           KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
           # create variables
@@ -359,61 +359,16 @@ jobs:
           mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
           cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
 
-      - name: Get Company Cer and Prov
-        env:
-          BUILD_CERTIFICATE_BASE64: ${{ secrets.COMPANY_P12 }}
-          P12_PASSWORD: ${{ secrets.COMPANY_P12_PASSWORD }}
-          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.COMPANY_PROV }}
-          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
-        run: |
-          # create variables
-          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
-          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
-          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
-          # import certificate and provisioning profile from secrets
-          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
-          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
-          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
-          # import certificate to keychain
-          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
-          security list-keychain -d user -s $KEYCHAIN_PATH
-       
       - name: Export IPA File
         run: |
-          xcodebuild -exportArchive -archivePath ./DarockBili_Release.xcarchive -exportPath ./ -exportOptionsPlist ./ExportOptions/app-store.plist -DVTProvisioningIsManaged=YES -DVTSkipCertificateValidityCheck=YES
-          mv DarockBili.ipa DarockBili_Release.ipa
+          xcodebuild -exportArchive -archivePath ./DarockBili_Release.xcarchive -exportPath ./ -exportOptionsPlist ./ExportOptions/ad-hoc.plist -DVTProvisioningIsManaged=YES -DVTSkipCertificateValidityCheck=YES
+          mv DarockBili.ipa DarockBili_Company.ipa
 
-      - name: Resign IPA
-        env:
-          COMPANY_P12_NAME: ${{ secrets.COMPANY_P12_NAME }}
-        run: |
-          CODESIGN_ALLOCATE=`xcrun --find codesign_allocate`; export CODESIGN_ALLOCATE
-          IPA="./DarockBili_Release.ipa"
-          PROVISION="$RUNNER_TEMP/build_pp.mobileprovision"
-          CERTIFICATE="$COMPANY_P12_NAME"
-          # unzip the ipa
-          unzip -q "$IPA"
-          mkdir Scache
-          mv Payload/*.app/Watch/*.app Scache
-          rm -rf Payload/*
-          mv Scache/*.app Payload/
-          # remove the signature
-          rm -rf Payload/*.app/_CodeSignature
-          # replace the provision
-          cp "$PROVISION" Payload/*.app/embedded.mobileprovision
-          plutil -convert xml1 Payload/*.app/Info.plist -o Info.plist
-          mv Info.plist Payload/*.app/Info.plist
-          sed -i "" 's/com.darock.DarockBili.watchkitapp/com.djbx.life.agent.dat/g' Payload/*.app/Info.plist
-          # sign with the new certificate (--resource-rules has been deprecated OS X Yosemite (10.10), it can safely be removed)
-          codesign -f -s "$CERTIFICATE" Payload/*.app
-          # zip it back up
-          zip -qr resigned.ipa Payload
-          
       - name: Upload IPA File
         uses: actions/upload-artifact@v3
         with:
           name: Company IPA
-          path: ./resigned.ipa
+          path: ./DarockBili_Company.ipa
 
   deploy:
     name: Deploy to TestFlight
