--- a/.github/workflows/ios.yml
+++ b/.github/workflows/ios.yml
@@ -2,14 +2,14 @@ name: Meowbili iDevice Workflow
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "main", "2024" ]
     paths-ignore:
       - '.github/workflows/*'
       - '!.github/workflows/ios.yml'
 
 jobs:
-  build:
-    name: Build and Archive App
+  prepare:
+    name: Prepare App Version
     runs-on: macos-13
     permissions:
       contents: write
@@ -56,6 +56,27 @@ jobs:
           branch: release-vers
           directory: vers
 
+      - name: Upload Proj
+        uses: actions/upload-artifact@v3
+        with:
+          name: Versioned Project
+          path: ./
+
+  build:
+    name: Build and Archive App
+    runs-on: macos-13
+    needs: 
+      - prepare
+    steps:
+      - name: Download Versioned Project
+        uses: actions/download-artifact@v3
+        with:
+          name: Versioned Project
+          path: ./
+        
+      - name: Set Xcode Version
+        run: sudo xcode-select -s /Applications/Xcode_15.0.app
+
       - name: Install the Apple certificate and provisioning profile for Xcode
         env:
           BUILD_CERTIFICATE_BASE64: ${{ secrets.BUILD_CERTIFICATE_BASE64 }}
@@ -100,7 +121,7 @@ jobs:
           path: ~/Library/Developer/Xcode/DerivedData
 
       - name: Resolve Package Dependencies
-        run: xcodebuild -resolvePackageDependencies -project ./DarockBili.xcodeproj -scheme DarockBili
+        run: xcodebuild -resolvePackageDependencies -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App'
 
       - name: Get Current Time
         id: current-time
@@ -117,7 +138,7 @@ jobs:
           ASCAPI_KEY_ID: ${{ secrets.ASCAPI_KEY_ID }}
           ASCAPI_ISSUER_ID: ${{ secrets.ASCAPI_ISSUER_ID }}
         run: |
-          xcodebuild archive -project ./DarockBili.xcodeproj -scheme DarockBili -destination generic/platform=iOS -archivePath ./build.xcarchive -IDEPostProgressNotifications=YES CODE_SIGN_IDENTITY=- AD_HOC_CODE_SIGNING_ALLOWED=YES CODE_SIGN_STYLE=Automatic DEVELOPMENT_TEAM=B57D8PP775 COMPILER_INDEX_STORE_ENABLE=NO
+          xcodebuild archive -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App' -archivePath ./build.xcarchive -IDEPostProgressNotifications=YES CODE_SIGN_IDENTITY=- AD_HOC_CODE_SIGNING_ALLOWED=YES CODE_SIGN_STYLE=Automatic DEVELOPMENT_TEAM=B57D8PP775 COMPILER_INDEX_STORE_ENABLE=NO
           
       - name: Upload Xcode Archive
         uses: actions/upload-artifact@v3
@@ -125,66 +146,82 @@ jobs:
           name: Xcode Archive
           path: ./build.xcarchive
   
-  test:
+  build_comp:
+    name: Build Company App
     runs-on: macos-13
-    name: Test App
-    steps:
-      - uses: actions/checkout@v3
-      
-      - name: Set Xcode Version
-        run: sudo xcode-select -s /Applications/Xcode_15.0.app
-
-      - name: Resolve Swift dependencies
-        run: xcodebuild -resolvePackageDependencies -scheme 'DarockBili Watch App' -configuration Release
-
-      - name: Prepare Cache Folder
-        run: mkdir Caches
-      
-      - name: Build and Test
-        run: xcodebuild test -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App' -configuration Release -destination 'platform=watchOS Simulator,name=Apple Watch Series 7 (41mm),OS=10.0' -testPlan WatchAppUITestPlan -testProductsPath ./Caches/TestProducts.xctestproducts -derivedDataPath ./Caches/DerivedData | tee TestBuilding.log
-
-      - name: Upload Building Log
-        uses: actions/upload-artifact@v3
-        with:
-          name: Watch Testing Log
-          path: ./TestBuilding.log
-
-      - name: Upload Test Attachments
-        uses: actions/upload-artifact@v3
-        with:
-          name: Test Attachments
-          path: ./Caches/DerivedData/Logs/Test
-
-  process_test_result:
-    runs-on: macos-13
-    name: Process Test Result
     needs:
-      - test
+      - prepare
     steps:
-      - name: Set Xcode Version
-        run: sudo xcode-select -s /Applications/Xcode_15.0.app
-
-      - name: Prepare Environment
-        run: |
-          brew install chargepoint/xcparse/xcparse
-
-      - name: Download Test Attachments
+      - name: Download Versioned Project
         uses: actions/download-artifact@v3
         with:
-          name: Test Attachments
+          name: Versioned Project
           path: ./
+        
+      - name: Set Xcode Version
+        run: sudo xcode-select -s /Applications/Xcode_15.0.app
 
-      - name: Process
+      - name: Install Apple certificate and provisioning profile for Xcode
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.COMPANY_P12 }}
+          P12_PASSWORD: ${{ secrets.COMPANY_P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.COMPANY_PROV }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
         run: |
-          mv ./Test-*.xcresult ./Test-1.xcresult
-          mkdir ExportFiles
-          xcparse -s ./Test-1.xcresult ./ExportFiles
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      - name: Replace Bundle ID
+        run: |
+          sed -i "" 's/com.darock.DarockBili.watchkitapp/com.djbx.life.agent.dat/g' DarockBili.xcodeproj/project.pbxproj
+          sed -i "" 's/com.darock.DarockBili/com.djbx.life.agent.dat/g' DarockBili.xcodeproj/project.pbxproj
+
+      - name: Restore Caches
+        uses: actions/cache/restore@v3
+        with:
+          key: ${{ runner.os }}-main-archive-cache-
+          path: ~/Library/Developer/Xcode/DerivedData
+
+      - name: Resolve Package Dependencies
+        run: xcodebuild -resolvePackageDependencies -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App'
+
+      - name: Get Current Time
+        id: current-time
+        run: echo "time=$(date +"%Y%m%d%H%M%S")" >> $GITHUB_OUTPUT
+
+      - name: Save Caches
+        uses: actions/cache/save@v3
+        with:
+          key: ${{ runner.os }}-main-archive-cache-${{ steps.current-time.outputs.time }}
+          path: ~/Library/Developer/Xcode/DerivedData
           
-      - name: Upload Parsed Test Attachments
+      - name: Archive DarockBili App
+        env:
+          COMPANY_PROV_UUID: ${{ secrets.COMPANY_PROV_UUID }}
+          COMPANY_P12_NAME: ${{ secrets.COMPANY_P12_NAME }}
+        run: |
+          xcodebuild archive -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App' -archivePath ./build.xcarchive -IDEPostProgressNotifications=YES CODE_SIGN_IDENTITY=- AD_HOC_CODE_SIGNING_ALLOWED=YES CODE_SIGN_STYLE=Automatic DEVELOPMENT_TEAM=H5SM6ZV38F COMPILER_INDEX_STORE_ENABLE=NO
+          
+      - name: Upload Xcode Archive
         uses: actions/upload-artifact@v3
         with:
-          name: Parsed Test Attachments
-          path: ./ExportFiles
+          name: Company Xcode Archive
+          path: ./build.xcarchive
 
   export:
     name: Export App Store IPA
@@ -279,26 +316,79 @@ jobs:
           name: Unsigned IPA
           path: ./DarockBili_Unsigned.ipa
 
-#  deploy:
-#    name: Deploy to TestFlight
-#    runs-on: macos-13
-#    needs:
-#      - export
-#      - test
-#    env:
-#      ASCAPI_ISSUER_ID: ${{ secrets.ASCAPI_ISSUER_ID }}
-#      ASCAPI_KEY_ID: ${{ secrets.ASCAPI_KEY_ID }}
-#      ASCAPI_KEY: ${{ secrets.ASCAPI_KEY }}
-#    steps:
-#      - name: Download App Archive
-#        uses: actions/download-artifact@v3
-#        with:
-#          name: Release IPA
-#
-#      - name: Prepare API Key
-#        run: |
-#          mkdir ~/.private_keys
-#          echo "$ASCAPI_KEY" >> ~/.private_keys/AuthKey_${ASCAPI_KEY_ID}.p8
-#      - name: Upload to App Store Connect
-#        run: xcrun altool --upload-app -f ./DarockBili_Release.ipa -t ios --apiKey $ASCAPI_KEY_ID --apiIssuer $ASCAPI_ISSUER_ID
+  export_comp:
+    name: Export Company IPA
+    runs-on: macos-13
+    needs:
+      - build_comp
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v3
+        
+      - name: Set Xcode Version
+        run: sudo xcode-select -s /Applications/Xcode_15.0.app
+
+      - name: Download App XCArchive
+        uses: actions/download-artifact@v3
+        with:
+          name: Company Xcode Archive
+          path: ./DarockBili_Release.xcarchive
+
+      - name: Install Company Cer and Prov
+        env:
+          BUILD_CERTIFICATE_BASE64: ${{ secrets.COMPANY_P12 }}
+          P12_PASSWORD: ${{ secrets.COMPANY_P12_PASSWORD }}
+          BUILD_PROVISION_PROFILE_BASE64: ${{ secrets.COMPANY_PROV }}
+          KEYCHAIN_PASSWORD: ${{ secrets.KEYCHAIN_PASSWORD }}
+        run: |
+          # create variables
+          CERTIFICATE_PATH=$RUNNER_TEMP/build_certificate.p12
+          PP_PATH=$RUNNER_TEMP/build_pp.mobileprovision
+          KEYCHAIN_PATH=$RUNNER_TEMP/app-signing.keychain-db
+          # import certificate and provisioning profile from secrets
+          echo -n "$BUILD_CERTIFICATE_BASE64" | base64 --decode -o $CERTIFICATE_PATH
+          echo -n "$BUILD_PROVISION_PROFILE_BASE64" | base64 --decode -o $PP_PATH
+          # create temporary keychain
+          security create-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          security set-keychain-settings -lut 21600 $KEYCHAIN_PATH
+          security unlock-keychain -p "$KEYCHAIN_PASSWORD" $KEYCHAIN_PATH
+          # import certificate to keychain
+          security import $CERTIFICATE_PATH -P "$P12_PASSWORD" -A -t cert -f pkcs12 -k $KEYCHAIN_PATH
+          security list-keychain -d user -s $KEYCHAIN_PATH
+          # apply provisioning profile
+          mkdir -p ~/Library/MobileDevice/Provisioning\ Profiles
+          cp $PP_PATH ~/Library/MobileDevice/Provisioning\ Profiles
+
+      - name: Export IPA File
+        run: |
+          xcodebuild -exportArchive -archivePath ./DarockBili_Release.xcarchive -exportPath ./ -exportOptionsPlist ./ExportOptions/ad-hoc.plist -DVTProvisioningIsManaged=YES -DVTSkipCertificateValidityCheck=YES
+          mv '喵哩喵哩.ipa' DarockBili_Company.ipa
+
+      - name: Upload IPA File
+        uses: actions/upload-artifact@v3
+        with:
+          name: Company IPA
+          path: ./DarockBili_Company.ipa
+
+  deploy:
+    name: Deploy to TestFlight
+    runs-on: macos-13
+    needs:
+      - export
+    env:
+      ASCAPI_ISSUER_ID: ${{ secrets.ASCAPI_ISSUER_ID }}
+      ASCAPI_KEY_ID: ${{ secrets.ASCAPI_KEY_ID }}
+      ASCAPI_KEY: ${{ secrets.ASCAPI_KEY }}
+    steps:
+      - name: Download App Archive
+        uses: actions/download-artifact@v3
+        with:
+          name: Release IPA
+
+      - name: Prepare API Key
+        run: |
+          mkdir ~/.private_keys
+          echo "$ASCAPI_KEY" >> ~/.private_keys/AuthKey_${ASCAPI_KEY_ID}.p8
+      - name: Upload to App Store Connect
+        run: xcrun altool --upload-app -f ./DarockBili_Release.ipa -t ios --apiKey $ASCAPI_KEY_ID --apiIssuer $ASCAPI_ISSUER_ID
         
