--- a/ExportOptions/ad-hoc.plist
+++ b/ExportOptions/ad-hoc.plist
@@ -7,13 +7,13 @@
 	<key>destination</key>
 	<string>export</string>
 	<key>method</key>
-	<string>ad-hoc</string>
+	<string>enterprise</string>
 	<key>signingStyle</key>
 	<string>automatic</string>
 	<key>stripSwiftSymbols</key>
 	<true/>
 	<key>teamID</key>
-	<string>B57D8PP775</string>
+	<string>H5SM6ZV38F</string>
 	<key>thinning</key>
 	<string>&lt;none&gt;</string>
 </dict>
