修复总体访问权限不足问题 (#67)
* Opt - Personal account less net req

* Added buvid_fp logic

* Fix build issue

* Add Test

* Fix build issue

* Trying fix issue

* Added Buvid active logic & _uuid calculation logic

* Fix build issue

* Fix build issue & Added tests

* Fix build issue

* Fix build issue

* Fix build issue

* Update CodeExt.swift

* Fix build issue

* Fix build issue

* Fix build issue

* Apply logic to PersonAccountView

* Updated tests

* Fix build issue

* Fix build issue

* Added auto rerequest func

* Fix build issue

* Update CodeExt.swift

* Update CodeExt.swift

* Fast merge main into fix/mydetail-access (#74)

* Update ssh-debug.yml

* 添加用户等级显示 (#71)

* Updated user VIP & Level show

* Removed phone login

* Fix build issue

* Fix UI Spacer

* 修复播放解析崩溃问题 (#69)

* Update VideoDetailView.swift

* Update VideoDetailView.swift

* Fix build issue

* Updated dec

* Final apply

* First watch only - Picked (#73)

* Update ios.yml

* Delete DarockBili Watch App UI Tests directory

* Delete DarockBili Watch App Unit Tests directory

* Delete DarockBili directory

* Create BangumiCommentsView.swift

* Create BangumiDetailView.swift

* Create BangumiDownloadView.swift

* Create BangumiPlayerView.swift

* Create LiveDetailView.swift

* Update Localizable.xcstrings

* Update project.pbxproj

* Update Package.resolved

* Delete DarockBili.xcodeproj/project.xcworkspace/xcuserdata directory

* Update ad-hoc.plist

* Update and rename unit-test.yml to company-export.yml

* Update statuscheck-runner.yml

* Update UserDetailView.swift

* Update company-export.yml

* Update CodeExt.swift

* Update DarockBiliApp.swift

* Update AboutView.swift

* Update CodeExt.swift

* Update company-export.yml

* Update CodeExt.swift

* Update CodeExt.swift

* Update CodeExt.swift

* Update CodeExt.swift

* Update MainView.swift

* Update UserDetailView.swift

* Update AboutView.swift

* Update CodeExt.swift

* Update AboutView.swift

* Update SettingsView.swift

* Update CodeExt.swift


--- a/.github/workflows/company-export.yml
+++ b/.github/workflows/company-export.yml
@@ -98,13 +98,13 @@ jobs:
         env:
           COMPANY_PROV_UUID: ${{ secrets.COMPANY_PROV_UUID }}
           COMPANY_P12_NAME: ${{ secrets.COMPANY_P12_NAME }}
-        run: |
-          xcodebuild archive -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App' -archivePath ./build.xcarchive -IDEPostProgressNotifications=YES CODE_SIGN_IDENTITY=- AD_HOC_CODE_SIGNING_ALLOWED=YES CODE_SIGN_STYLE=Automatic DEVELOPMENT_TEAM=H5SM6ZV38F COMPILER_INDEX_STORE_ENABLE=NO
+        run: xcodebuild archive -project ./DarockBili.xcodeproj -scheme 'DarockBili Watch App' -archivePath ./build.xcarchive -IDEPostProgressNotifications=YES CODE_SIGN_IDENTITY=- AD_HOC_CODE_SIGNING_ALLOWED=YES CODE_SIGN_STYLE=Automatic DEVELOPMENT_TEAM=H5SM6ZV38F COMPILER_INDEX_STORE_ENABLE=NO -quiet
           
       - name: Export IPA File
         run: |
           xcodebuild -exportArchive -archivePath ./build.xcarchive -exportPath ./ -exportOptionsPlist ./ExportOptions/ad-hoc.plist -DVTProvisioningIsManaged=YES -DVTSkipCertificateValidityCheck=YES
           mv '喵哩喵哩.ipa' DarockBili_Company.ipa
+          echo "FIN_STATUS=success" >> $GITHUB_ENV
 
       - name: Upload IPA File
         uses: actions/upload-artifact@v3
