--- a/.github/workflows/statuscheck-runner.yml
+++ b/.github/workflows/statuscheck-runner.yml
@@ -13,7 +13,6 @@ jobs:
       shouldc: ${{ steps.checkc.outputs.shouldc }}
       shouldtun: ${{ steps.checkc.outputs.shouldtun }}
       shouldtui: ${{ steps.checkc.outputs.shouldtui }}
-      shouldta: ${{ steps.checkc.outputs.shouldta }}
     steps:
       - name: Check
         id: checkc
@@ -30,15 +29,10 @@ jobs:
           else
             echo "::set-output name=shouldtun::true"
           fi
-          if [[ "${{ github.event.comment.body }}" != *"!Run UI Test"* ]]; then
+          if [[ "${{ github.event.comment.body }}" != *"!Deploy TF"* ]]; then
             echo "::set-output name=shouldtui::false"
           else
             echo "::set-output name=shouldtui::true"
-          fi
-          if [[ "${{ github.event.comment.body }}" != *"!Run test"* ]]; then
-            echo "::set-output name=shouldta::false"
-          else
-            echo "::set-output name=shouldta::true"
           fi
   get-head-sha:
     name: Get Pull Request Head SHA
@@ -93,8 +87,8 @@ jobs:
           workflow: company-export.yml
           ref: ${{ needs.get-head-sha.outputs.psha }}
           inputs: '{ "psha": "${{ needs.get-head-sha.outputs.psha }}", "repository": "${{ needs.get-head-sha.outputs.repository }}", "lsha": "${{ needs.get-head-sha.outputs.lsha }}" }'
-  call-ui-test-workflow:
-    name: Call UI Test Overflow
+  call-tf-deploy-workflow:
+    name: Call TestFlight Internal Deploy Overflow
     needs: 
       - get-head-sha
       - checkif
@@ -106,6 +100,6 @@ jobs:
       - name: Call
         uses: benc-uk/workflow-dispatch@v1.2.2
         with:
-          workflow: ui-test.yml
+          workflow: tf.yml
           ref: ${{ needs.get-head-sha.outputs.psha }}
           inputs: '{ "psha": "${{ needs.get-head-sha.outputs.psha }}", "repository": "${{ needs.get-head-sha.outputs.repository }}", "lsha": "${{ needs.get-head-sha.outputs.lsha }}" }'
