--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili Watch App.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili Watch App.xcscheme
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <Scheme
-   LastUpgradeVersion = "1500"
+   LastUpgradeVersion = "1520"
    version = "1.7">
    <BuildAction
       parallelizeBuildables = "YES"
@@ -14,8 +14,8 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6BFF295B2A6C0D1C00914A8E"
-               BuildableName = "DarockBili Watch App.app"
+               BlueprintIdentifier = "B44689CF2B4FC15A002CCEB2"
+               BuildableName = "&#x55b5;&#x54e9;&#x55b5;&#x54e9;.app"
                BlueprintName = "DarockBili Watch App"
                ReferencedContainer = "container:DarockBili.xcodeproj">
             </BuildableReference>
@@ -28,7 +28,7 @@
             buildForAnalyzing = "YES">
             <BuildableReference
                BuildableIdentifier = "primary"
-               BlueprintIdentifier = "6BFF29012A6C0B3A00914A8E"
+               BlueprintIdentifier = "B44689C92B4FC15A002CCEB2"
                BuildableName = "DarockBili.app"
                BlueprintName = "DarockBili"
                ReferencedContainer = "container:DarockBili.xcodeproj">
@@ -98,8 +98,8 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6BFF295B2A6C0D1C00914A8E"
-            BuildableName = "DarockBili Watch App.app"
+            BlueprintIdentifier = "B44689CF2B4FC15A002CCEB2"
+            BuildableName = "&#x55b5;&#x54e9;&#x55b5;&#x54e9;.app"
             BlueprintName = "DarockBili Watch App"
             ReferencedContainer = "container:DarockBili.xcodeproj">
          </BuildableReference>
@@ -115,8 +115,8 @@
          runnableDebuggingMode = "0">
          <BuildableReference
             BuildableIdentifier = "primary"
-            BlueprintIdentifier = "6BFF295B2A6C0D1C00914A8E"
-            BuildableName = "DarockBili Watch App.app"
+            BlueprintIdentifier = "B44689CF2B4FC15A002CCEB2"
+            BuildableName = "&#x55b5;&#x54e9;&#x55b5;&#x54e9;.app"
             BlueprintName = "DarockBili Watch App"
             ReferencedContainer = "container:DarockBili.xcodeproj">
          </BuildableReference>
