--- a/.github/workflows/statuscheck-runner.yml
+++ b/.github/workflows/statuscheck-runner.yml
@@ -70,6 +70,7 @@ jobs:
         with:
           workflow: status-check.yml
           ref: ${{ needs.get-head-sha.outputs.psha }}
+          repo: ${{ needs.get-head-sha.outputs.repository }}
           inputs: '{ "psha": "${{ needs.get-head-sha.outputs.psha }}", "repository": "${{ needs.get-head-sha.outputs.repository }}", "lsha": "${{ needs.get-head-sha.outputs.lsha }}" }'
   call-company-export-workflow:
     name: Call Company Export Overflow
@@ -86,6 +87,7 @@ jobs:
         with:
           workflow: company-export.yml
           ref: ${{ needs.get-head-sha.outputs.psha }}
+          repo: ${{ needs.get-head-sha.outputs.repository }}
           inputs: '{ "psha": "${{ needs.get-head-sha.outputs.psha }}", "repository": "${{ needs.get-head-sha.outputs.repository }}", "lsha": "${{ needs.get-head-sha.outputs.lsha }}" }'
   call-tf-deploy-workflow:
     name: Call TestFlight Internal Deploy Overflow
@@ -102,4 +104,5 @@ jobs:
         with:
           workflow: tf.yml
           ref: ${{ needs.get-head-sha.outputs.psha }}
+          repo: ${{ needs.get-head-sha.outputs.repository }}
           inputs: '{ "psha": "${{ needs.get-head-sha.outputs.psha }}", "repository": "${{ needs.get-head-sha.outputs.repository }}", "lsha": "${{ needs.get-head-sha.outputs.lsha }}" }'
