--- a/MeowBili/Info.plist
+++ b/MeowBili/Info.plist
@@ -20,6 +20,10 @@
 		<key>NSAllowsArbitraryLoads</key>
 		<true/>
 	</dict>
+	<key>NSUserActivityTypes</key>
+	<array>
+		<string>com.darock.DarockBili.video-play</string>
+	</array>
 	<key>UIAppFonts</key>
 	<array>
 		<string>BiliFont.ttf</string>
