--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili Watch App.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/DarockBili Watch App.xcscheme
@@ -10,7 +10,8 @@
             ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
             <ActionContent
                title = "Run Script"
-               scriptText = "cd /Users/memz233/Desktop/Darock-Bili&#10;agvtool next-version -all&#10;">
+               scriptText = "cd &quot;${SRCROOT}&quot;&#10;agvtool next-version -all&#10;"
+               shellToInvoke = "/bin/bash">
                <EnvironmentBuildable>
                   <BuildableReference
                      BuildableIdentifier = "primary"
@@ -71,15 +72,6 @@
       debugDocumentVersioning = "YES"
       debugServiceExtension = "internal"
       allowLocationSimulation = "YES">
-      <PostActions>
-         <ExecutionAction
-            ActionType = "Xcode.IDEStandardExecutionActionsCore.ExecutionActionType.ShellScriptAction">
-            <ActionContent
-               title = "Run Script"
-               scriptText = "cd /Users/memz233/Desktop/Darock-Bili&#10;agvtool next-version -all&#10;">
-            </ActionContent>
-         </ExecutionAction>
-      </PostActions>
       <BuildableProductRunnable
          runnableDebuggingMode = "0">
          <BuildableReference
