fix(iOS-Comments, Dynamic, VideoDetails): Fixed comments always show 'continue load' & VideoDetailView reload issue

--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
@@ -68,6 +68,13 @@
             ReferencedContainer = "container:DarockBili.xcodeproj">
          </BuildableReference>
       </BuildableProductRunnable>
+      <AdditionalOptions>
+         <AdditionalOption
+            key = "NSZombieEnabled"
+            value = "YES"
+            isEnabled = "YES">
+         </AdditionalOption>
+      </AdditionalOptions>
    </LaunchAction>
    <ProfileAction
       buildConfiguration = "Release"
