--- a/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
+++ b/DarockBili.xcodeproj/xcshareddata/xcschemes/MeowBili.xcscheme
@@ -45,8 +45,13 @@
       buildConfiguration = "Debug"
       selectedDebuggerIdentifier = "Xcode.DebuggerFoundation.Debugger.LLDB"
       selectedLauncherIdentifier = "Xcode.DebuggerFoundation.Launcher.LLDB"
-      shouldUseLaunchSchemeArgsEnv = "YES"
-      shouldAutocreateTestPlan = "YES">
+      shouldUseLaunchSchemeArgsEnv = "YES">
+      <TestPlans>
+         <TestPlanReference
+            reference = "container:MeowBili/MeowBili.xctestplan"
+            default = "YES">
+         </TestPlanReference>
+      </TestPlans>
       <Testables>
          <TestableReference
             skipped = "NO"
@@ -56,6 +61,17 @@
                BlueprintIdentifier = "8CA370C62B82528400CE0E9E"
                BuildableName = "MeowBiliTests.xctest"
                BlueprintName = "MeowBiliTests"
+               ReferencedContainer = "container:DarockBili.xcodeproj">
+            </BuildableReference>
+         </TestableReference>
+         <TestableReference
+            skipped = "NO"
+            parallelizable = "YES">
+            <BuildableReference
+               BuildableIdentifier = "primary"
+               BlueprintIdentifier = "8CC5B73F2B8749BC00BAD89E"
+               BuildableName = "MeowBiliUITests.xctest"
+               BlueprintName = "MeowBiliUITests"
                ReferencedContainer = "container:DarockBili.xcodeproj">
             </BuildableReference>
          </TestableReference>
