--- a/.github/workflows/dylib-export.yml
+++ b/.github/workflows/dylib-export.yml
@@ -77,7 +77,7 @@ jobs:
 
       - name: Resign Dylibs
         run: |
-          codesign -fs "Apple Development" build/Build/Products/Release-watchos/DarockBili.dynamic.watch.dylib
+          codesign -fs "Yuxuan Chen" build/Build/Products/Release-watchos/DarockBili.dynamic.watch.dylib
           
       - name: Upload watchOS Dylib
         uses: actions/upload-artifact@v3
